modal is visible with position fixed, but content beneath scrolls

--- a/lions-bridge-proposal/pages/grid/grid-item/grid-item-text/grid-item-text.module.scss
+++ b/lions-bridge-proposal/pages/grid/grid-item/grid-item-text/grid-item-text.module.scss
@@ -22,6 +22,24 @@
 
   &Modal {
 
+    &Overlay {
+      position: fixed;
+
+      inset: 0;
+      top: 52px;
+      width: 100%;
+
+      overscroll-behavior: contain;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 8%;
+
+      background-color: $color-grid-item-text-background;
+
+
+    }
     &Close {
       all: unset;
 
@@ -38,22 +56,6 @@
       }
     }
 
-    &Overlay {
-      position: absolute;
-      top: 52px;
-      left: 0;
-      width: 100%;
-      height: 100dvh;
-
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 9%;
-
-
-      //padding-block: 40px;
-      background-color: $color-grid-item-text-background;
-    }
 
     &Header,
     &Container {
